--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Zero Hunger AI Bot</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Zero Hunger AI Bot</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="chat-container">
-        <h1>Zero Hunger AI Bot</h1>
-        <div id="chat-box"></div>
-        <input type="text" id="user-input" placeholder="Ask me something...">
-        <button onclick="sendMessage()">Send</button>
-    </div>
-    <script src="script.js"></script>
+  <div class="chat-container">
+    <h1>Zero Hunger AI Bot</h1>
+    <div id="chat-box"></div>
+    <input type="text" id="user-input" placeholder="Ask me something...">
+    <button id="send-btn">Send</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
+
+
